shopping/src/main/java/org/example/shopping/_core/errors/exception/Exception404.java
package org.example.shopping._core.errors.exception;

/**
 * 404 Not Found
 */
public class Exception404 extends RuntimeException {
    public Exception404(String msg) {
        super(msg);
    }


}
